--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Shopping Cart</title>
 </head>
 
 <body>
-
+    <h1>This is the Home Page</h1>
 </body>
 
 </html>
