--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="overlay"></div>
+        <nav>
+            <h2>Shop</h2>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
 </body>
 
 </html>
