cart.html updated

--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Shopping Cart</title>
 </head>
 
@@ -11,9 +12,15 @@
     <header>
         <div class="overlay"></div>
         <nav>
-            <h2>Shop</h2>
+            <h2>SHOP</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li class="cart">
+                    <a href="cart.html">
+                        <ion-icon name="basket"></ion-icon>Cart<span>0</span>
+                    </a>
+                </li>
             </ul>
         </nav>
 </body>
