--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
             </ul>
         </nav>
     </header>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <div class="container">
+        <div class="image">
+            <img src="images/longdress.jpg" alt="long_dress" />
+            <h3>Long Dress</h3>
+            <h3>$18.00</h3>
+            <a class="add-cart cart1" href="#">Add Cart</a>
+            <input type="hidden" value="15" />
+        </div>
+    </div>
+    <script src=" https://unpkg.com/ionicons@5.1.2/dist/ionicons.js ">
+    </script>
 </body>
 
 </html>
