--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <a class="add-cart cart1" href="#">Add Cart</a>
             <input type="hidden" value="15" />
         </div>
+        <div class="image">
+            <img src="images/shoe.jpg" alt="ladies_show" />
+            <h3>Ladies Shoe</h3>
+            <h3>$30.00</h3>
+            <a class="add-cart cart1" href="#">Add Cart</a>
+            <input type="hidden" value="20" />
+        </div>
     </div>
     <script src=" https://unpkg.com/ionicons@5.1.2/dist/ionicons.js ">
     </script>
