--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             <a class="add-cart cart1" href="#">Add Cart</a>
             <input type="hidden" value="20" />
         </div>
+        <div class="image">
+            <img src="images/coat.jpg" alt="ladies_coat" />
+            <h3>Ladies Coat</h3>
+            <h3>$65.00</h3>
+            <a class="add-cart cart1" href="#">Add Cart</a>
+            <input type="hidden" value="15" />
+        </div>
     </div>
     <script src=" https://unpkg.com/ionicons@5.1.2/dist/ionicons.js ">
     </script>
