--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <a class="add-cart cart1" href="#">Add Cart</a>
             <input type="hidden" value="15" />
         </div>
+        <div class="image">
+            <img src="images/pants.jpg" alt="ladies_pant" />
+            <h3>Ladies Pant</h3>
+            <h3>$35.00</h3>
+            <a class="add-cart cart1" href="#">Add Cart</a>
+            <input type="hidden" value="20" />
+        </div>
     </div>
     <script src=" https://unpkg.com/ionicons@5.1.2/dist/ionicons.js ">
     </script>
