styles.css updated

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
     </header>
     <div class="container">
         <div class="image">
-            <img src="images/longdress.jpg" alt="long_dress" />
+            <img class='resize_fit_center' src="images/longdress.jpg" alt="long_dress" />
             <h3>Long Dress</h3>
             <h3>$18.00</h3>
             <a class="add-cart cart1" href="#">Add Cart</a>
         </div>
         <div class="image">
-            <img src="images/shoe.jpg" alt="ladies_show" />
+            <img class='resize_fit_center' src="images/shoe.jpg" alt="ladies_show" />
             <h3>Ladies Shoe</h3>
             <h3>$30.00</h3>
             <a class="add-cart cart1" href="#">Add Cart</a>
         </div>
         <div class="image">
-            <img src="images/coat.jpg" alt="ladies_coat" />
+            <img class='resize_fit_center' src="images/coat.jpg" alt="ladies_coat" />
             <h3>Ladies Coat</h3>
             <h3>$65.00</h3>
             <a class="add-cart cart1" href="#">Add Cart</a>
         </div>
         <div class="image">
-            <img src="images/pants.jpg" alt="ladies_pant" />
+            <img class='resize_fit_center' src="images/pants.jpg" alt="ladies_pant" />
             <h3>Ladies Pant</h3>
             <h3>$35.00</h3>
             <a class="add-cart cart1" href="#">Add Cart</a>
