--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     </div>
     <script src=" https://unpkg.com/ionicons@5.1.2/dist/ionicons.js ">
     </script>
+    <script src="main.js">
+    </script>
 </body>
 
 </html>
