--- a/cart.html
+++ b/cart.html
@@ -26,6 +26,7 @@
             </ul>
         </nav>
     </header>
+    <script src="main.js"></script>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 
