cart.html updated

--- a/cart.html
+++ b/cart.html
@@ -26,6 +26,11 @@
             </ul>
         </nav>
     </header>
+    <div class="products-container">
+        <div class="product-header">
+            <h5 class="product-title">PRODUCT</h5>
+        </div>
+    </div>
     <script src="main.js"></script>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
