cart.html updated

--- a/cart.html
+++ b/cart.html
@@ -29,6 +29,8 @@
     <div class="products-container">
         <div class="product-header">
             <h5 class="product-title">PRODUCT</h5>
+            <h5 class="price">PRICE</h5>
+            <h5 class="quantity">QUANTITY</h5>
         </div>
     </div>
     <script src="main.js"></script>
