cart.html updated

--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,10 @@
             <h5 class="product-title">PRODUCT</h5>
             <h5 class="price">PRICE</h5>
             <h5 class="quantity">QUANTITY</h5>
+            <h5 class="total">TOTAL</h5>
+        </div>
+        <div class="products">
+
         </div>
     </div>
     <script src="main.js"></script>
